[gd_scene load_steps=35 format=2]

[ext_resource path="res://Sprites/Explosion/img_10.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Explosion/img_28.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Explosion/img_12.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Explosion/img_25.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Explosion/img_19.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Explosion/img_20.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Explosion/img_29.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Explosion/img_18.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Explosion/img_14.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Explosion/img_22.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Explosion/img_11.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Explosion/img_6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Explosion/img_7.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Explosion/img_17.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Explosion/img_23.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Explosion/img_2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Explosion/img_13.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Explosion/img_9.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Explosion/img_4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Explosion/img_16.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Explosion/img_5.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/Ships/ship_2.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Explosion/img_8.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Explosion/img_15.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Explosion/img_3.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Explosion/img_1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Explosion/img_21.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Explosion/img_0.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Explosion/img_26.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Explosion/img_27.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Explosion/img_24.png" type="Texture" id=31]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=32]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 26 ), ExtResource( 16 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 27 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 31 ), ExtResource( 4 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "Death",
"speed": 40.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "Normal",
"speed": 1.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 500, 500 )
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 2 )
animation = "Normal"
playing = true

[node name="Cannons" type="Node2D" parent="."]

[node name="Left" type="Position2D" parent="Cannons"]
position = Vector2( -11.3393, -11.1356 )

[node name="CoolerLeft" type="Position2D" parent="Cannons"]
position = Vector2( 10.3943, -11.1356 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="DoubleShooting" type="Timer" parent="."]
wait_time = 5.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="DoubleShooting" to="." method="_on_DoubleShooting_timeout"]
